RESOLVED FIXED80633
Missing some places where we should be blinding 64bit values (and blinding something we shouldn't)
https://bugs.webkit.org/show_bug.cgi?id=80633
Summary Missing some places where we should be blinding 64bit values (and blinding so...
Oliver Hunt
Reported 2012-03-08 13:27:08 PST
Missing some places where we should be blinding 64bit values (and blinding something we shouldn't)
Attachments
Patch (4.71 KB, patch)
2012-03-08 13:31 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2012-03-08 13:31:12 PST
WebKit Review Bot
Comment 2 2012-03-08 13:33:35 PST
Attachment 130890 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/assembler/MacroAssembler.h:524: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Oliver Hunt
Comment 3 2012-03-08 13:59:13 PST
Oliver Hunt
Comment 5 2012-03-08 14:29:31 PST
Committed r110206
Note You need to log in before you can comment on or make changes to this bug.