Source/JavaScriptCore/assembler/AbstractMacroAssembler.h
@@ -592,6 +592,7 @@ protected:
     
     static bool scratchRegisterForBlinding() { return false; }
     static bool shouldBlindForSpecificArch(uint32_t) { return true; }
+    static bool shouldBlindForSpecificArch(uint64_t) { return true; }
 
     friend class LinkBuffer;
     friend class RepatchBuffer;
